overflow fix

--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -19,5 +19,5 @@
   padding: 10px;
   margin: 30px;
   border: solid 1px #444444;
-  font-size: 30px;
+  font-size: 25px;
 }
